Closed Bug 656221 Opened 13 years ago Closed 13 years ago

TI+JM: Assertion failure: fe_ != NULL, at ../methodjit/FrameState.h:223

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

--
function f() {
    var a = [];
    a.push(a);
}
f();
--
$ ./js -n -a -m test.js
Assertion failure: fe_ != NULL, at ../methodjit/FrameState.h:223

Revision fd1abc43d698, 32-bit OS X.
Needed to filter out some silly cases in Array.{push,pop}, e.g. pushing a onto itself or where a is a constant value.

http://hg.mozilla.org/projects/jaegermonkey/rev/ca4dfcc95371
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.