[INFER] Skip silly FrameEntry cases when inlining Array.{push,pop}, bug 656221.