js/src/jit-test/tests/jaeger/inline/bug656221.js
@@ -1,0 +1,5 @@
+function f() {
+    var a = [];
+    a.push(a);
+}
+f();
